Fieldset de "Entrada" padronizado e flexível

--- a/index.html
+++ b/index.html
@@ -30,15 +30,10 @@
             <fieldset>
                 <legend>Entrada</legend>
                 
-                <select name="ano-entrada" id="ano-entrada">
-                    <option value="2020">2020</option>
-                    <option value="2019">2019</option>
-                    <option value="2018">2018</option>
-                    <option value="2017">2017</option>
-                </select>
+                <select name="ano-entrada" id="ano-entrada"></select>
                 
-                <input type="radio" id="ponto 1" name="semestre-entrada" value="1"><label for="male">.1</label>
-                <input type="radio" id="ponto 2" name="semestre-entrada" value="2"><label for="female">.2</label><br>
+                <input type="radio" id=".1" name="semestre-entrada" value="1"><label for="male">.1</label>
+                <input type="radio" id=".2" name="semestre-entrada" value="2"><label for="female">.2</label><br>
             </fieldset><br>
             <fieldset>
                 <legend>Disciplinas concluídas</legend>
