Estrutura de tabelas pronta com fieldset "Disciplinas" integrado
Adicionadas estruturas de dados temporárias (enquanto não integra com base de dados)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <legend>Disciplinas concluídas</legend>
                 <div id="selecao-disciplinas">
                     <div id="disciplinas-nao-selecionadas"></div>
-                    <div id="disciplinas-selecionadas"></div>
+                    <div id="disciplinas-selecionadas"><span id="placeholder-span"></span></div>
                 </div>
             </fieldset><br>
             <input type="submit" value="Me mostre meu perfil!">
@@ -47,7 +47,7 @@
     </div>
 
     <div id='content'>
-        <div class="periodo">
+        <div id='div-periodo' class="periodo">
             <h1>1o Período</h1>
             <table>
                 <thead>
@@ -59,7 +59,7 @@
                     </tr>
                 </thead>
                 <tbody id='tbody 1o periodo'>
-                    <!-- <tr id='tr Anatomia 1'>
+                    <tr id='tr Anatomia 1'>
                         <td>FT024</td>
                         <td>Anatomia 1</td>
                         <td>90h</td>
@@ -70,63 +70,6 @@
                                 <div class="tem-pre-req">tem</div>
                             </div>
                         </td>
-                    </tr> -->
-                </tbody>
-            </table>
-        </div>
-        <div class="periodo">
-            <h1>2o Período</h1>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Código</th>
-                        <th>Disciplina</th>
-                        <th>CH</th>
-                        <th>Pré-requisitos</th>
-                    </tr>
-                </thead>
-                <tbody id='tbody 2o periodo'>
-                    <tr>
-                        <td>FT024</td>
-                        <td>Cinesiologia</td>
-                        <td>60h</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>FT024</td>
-                        <td>Cinesiologia</td>
-                        <td>60h</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>FT024</td>
-                        <td>Cinesiologia</td>
-                        <td>60h</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>FT024</td>
-                        <td>Cinesiologia</td>
-                        <td>60h</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>FT024</td>
-                        <td>Cinesiologia</td>
-                        <td>60h</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>FT024</td>
-                        <td>Cinesiologia</td>
-                        <td>60h</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>FT024</td>
-                        <td>Cinesiologia</td>
-                        <td>60h</td>
-                        <td></td>
                     </tr>
                 </tbody>
             </table>
