Marca disciplinas atrasadas e esconde períodos concluídos

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </tr>
                 </thead>
                 <tbody id='tbody 1o periodo'>
-                    <tr id='tr Anatomia 1'>
+                    <!-- <tr id='tr Anatomia 1'>
                         <td>FT024</td>
                         <td>Anatomia 1</td>
                         <td>90h</td>
@@ -70,7 +70,7 @@
                                 <div class="tem-pre-req">tem</div>
                             </div>
                         </td>
-                    </tr>
+                    </tr> -->
                 </tbody>
             </table>
         </div>
