Atributos add e att dinamicamente em 'Disciplina' + Etiquetas pré-req

--- a/index.html
+++ b/index.html
@@ -60,20 +60,7 @@
                         <th>Pré-requisitos</th>
                     </tr>
                 </thead>
-                <tbody id='tbody 1o periodo'>
-                    <!-- <tr id='tr Anatomia 1'>
-                        <td>FT024</td>
-                        <td>Anatomia 1</td>
-                        <td>90h</td>
-                        <td>
-                            <div class="etiquetas-pre-req">
-                                <div class="eh-pre-req">é</div>
-                                <div class="tem-pre-req">tem</div>
-                                <div class="tem-pre-req">tem</div>
-                            </div>
-                        </td>
-                    </tr> -->
-                </tbody>
+                <tbody id='tbody 1o periodo'></tbody>
             </table>
             <!-- TODO: colocar um <footer> com soma de carga horária total -->
         </section>
