--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
                     até limitar suas escolhas de acordo com seu tempo disponível. As possibilidades são infinitas,
                     mas o objetivo é sempre o mesmo: otimizar cada semestre da sua vida acadêmica, de acordo com
                     o <strong>seu</strong> objetivo.</span></p>
-            <button id="landing-page-button">Clique aqui se quiser facilitar sua vida ;)</button>
+            <button id='landing-page-button'>Clique aqui para facilitar sua vida ;)</button>
+            <footer id='mvp'>* Essa é a versão inicial do sistema, disponível apenas para validação junto a alunxs de Fisioterapia na UFPE.</footer>
         </div>
 
         <div id='menu-background'></div>
     </section>
     
-    <div id='menu'>
+    <section id='menu'>
         <h2>Olá alunx!</h2>
-        <p>Comece preenchendo abaixo sua entrada e disciplinas concluídas:</p><br>
+        <p>Comece preenchendo abaixo sua entrada e disciplinas concluídas:</p>
+        <!-- <br> -->
         <form>
             <fieldset>
                 <legend>Entrada</legend>
@@ -37,32 +39,70 @@
                 <input type="radio" id=".2" name="semestre-entrada" value="2">
                 <label for=".2">.2</label>
                 <br>
-            </fieldset><br>
+            </fieldset>
+            <br>
             <fieldset>
                 <legend>Disciplinas concluídas</legend>
                 <div id="div-lists-menu">
                     <ul id='main-ul-menu'></ul>
                 </div>
-            </fieldset><br>
-            <input type="submit" value="Me mostre meu perfil!">
+            </fieldset>
+            <br>
+            <fieldset>
+                <legend>Seu objetivo</legend>
+                <p>Agora você escolhe</p>
+                <select name="seu-objetivo" id="seu-objetivo">
+                    <option value="rapido">Me formar o mais rápido possível</option>
+                    <option value="distribuindo">Distribuir carga horária entre semestres</option>
+                    <option value="teoricas">Priorizar disciplinas teóricas</option>
+                    <option value="limitando">Limitar carga horária total por semestre</option>
+                </select>
+                <label>CH máxima por semestre: <input type="number" id="ch-maxima" name="ch-maxima" placeholder="240" min="30" max="600" step="15"></label>
+                <input type="submit" value="Me mostre meu perfil!">
+            </fieldset>
         </form>
-    </div>
+    </section>
 
-    <section id='perfil'>
-        <section id='modelo-periodo' class="periodo">
-            <h2>1o Período</h2> <!-- TODO: colocar em <header> -->
-            <table> <!-- TODO: colocar em <main> -->
-                <thead>
-                    <tr>
-                        <th>Código</th>
-                        <th>Disciplina</th>
-                        <th>CH</th>
-                        <th>Pré-requisitos</th>
-                    </tr>
-                </thead>
-                <tbody id='tbody 1o periodo'></tbody>
-            </table>
-            <!-- TODO: colocar um <footer> com soma de carga horária total -->
+    <section id='conteudo'>
+        <section id='planejamento'>
+            <h1>Seu planejamento</h1>
+            <hr>
+            <section id='modelo-semestre' class="semestre">
+                <h2>2020.1 - 1o Período</h2> <!-- TODO: colocar em <header> -->
+                <table> <!-- TODO: colocar em <main> -->
+                    <thead>
+                        <tr>
+                            <th>Código</th>
+                            <th>Disciplina</th>
+                            <th>CH</th>
+                            <th>Período</th>
+                            <th>Etiquetas</th>
+                        </tr>
+                    </thead>
+                    <tbody id='tbody 1o periodo'></tbody>
+                </table>
+                <!-- TODO: colocar um <footer> com soma de carga horária total -->
+            </section>
+        </section>
+
+        <section id='perfil'>
+            <h1>Perfil interativo</h1>
+            <hr>
+            <section id='modelo-periodo' class="periodo">
+                <h2>1o Período</h2> <!-- TODO: colocar em <header> -->
+                <table> <!-- TODO: colocar em <main> -->
+                    <thead>
+                        <tr>
+                            <th>Código</th>
+                            <th>Disciplina</th>
+                            <th>CH</th>
+                            <th>Pré-requisitos</th>
+                        </tr>
+                    </thead>
+                    <tbody id='tbody 1o periodo'></tbody>
+                </table>
+                <!-- TODO: colocar um <footer> com soma de carga horária total -->
+            </section>
         </section>
     </section>
 </body>
