Perfil especificado + texto explicativo

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <section>
         <div id='landing-page'>
             <span id='boas-vindas'>Bem-vindx, alunx!</span>
-            <p><span>Esse espaço foi criado para você. Seja por ter dispensado, reprovado ou não pago alguma
+            <p><span id='texto-inicial'>Esse espaço foi criado para você. Seja por ter dispensado, reprovado ou não pago alguma
                     disciplina obrigatória; seja por querer adiantar as que você já tenha os pré-requisitos, ou
                     até limitar suas escolhas de acordo com seu tempo disponível. As possibilidades são infinitas,
                     mas o objetivo é sempre o mesmo: otimizar cada semestre da sua vida acadêmica, de acordo com
                     o <strong>seu</strong> objetivo.</span></p>
             <button id='landing-page-button'>Clique aqui para facilitar sua vida ;)</button>
-            <footer id='mvp'>* Essa é a versão inicial do sistema, disponível apenas para validação junto a alunxs de Fisioterapia na UFPE.</footer>
+            <footer id='mvp'>* Essa é a versão inicial do sistema, disponível apenas para validação junto a alunxs de Fisioterapia na UFPE que se enquadram no perfil 6804-1</footer>
         </div>
 
         <div id='menu-background'></div>
@@ -86,7 +86,14 @@
         </section>
 
         <section id='perfil'>
-            <h1>Perfil interativo</h1>
+            <h1>Perfil interativo (6804-1)</h1>
+            <span style="font-family: Arial; font-size: smaller;">
+            <p><<< Comece preenchendo as informações ao lado</p>
+            <p>Esse perfil se adequa à medida que você vai marcando as disciplinas que já concluiu. Note que:<br>
+            1) Se o bloco "tem" não estiver preenchido, quer dizer que você já pode se matricular na disciplina.<br>
+            2) Se a disciplina for pré-requisito para alguma outra, o bloco "é" estará preenchido.<br>
+            3) A carga horária das disciplinas que não têm prática aparecem <span class='sem-pratica'>sublinhadas</span>.</p>
+            </span>
             <hr>
             <section id='modelo-periodo' class="periodo">
                 <h2>1o Período</h2> <!-- TODO: colocar em <header> -->
