Adiciona contato p/ feedback

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             1) Se o bloco "tem" não estiver preenchido, quer dizer que você já pode se matricular na disciplina.<br>
             2) Se a disciplina for pré-requisito para alguma outra, o bloco "é" estará preenchido.<br>
             3) A carga horária das disciplinas que não têm prática aparecem <span class='sem-pratica'>sublinhadas</span>.</p>
+            <p>Me diz o que achou dessa plataforma? <a href="https://wa.me/5581995044227" target="_blank">WhatsApp</a> / <a href="mailto:monteiro.diana18@gmail.com">E-mail</a></p>
             </span>
             <hr>
             <section id='modelo-periodo' class="periodo">
